--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "formik": "^2.4.6",
+    "framer-motion": "^11.5.5",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
