--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.5",
     "next": "14.2.11",
