--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "make-seed": "npx sequelize-cli seed:generate --name demo-book",
     "seed-all": "npx sequelize-cli db:seed:all",
@@ -14,6 +14,7 @@
   "author": "Hamza Khawaja",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.4.5",
@@ -24,6 +25,8 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2"
   }
 }
